<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/temperature_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@+id/temperature_detail"
        android:textSize="15dp"
        android:layout_marginTop="63dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/temperature_txt"
        android:layout_toEndOf="@+id/temperature_txt" />
    <TextView
        android:id="@+id/health_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@+id/health_detail"
        android:textSize="15dp"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/temperature_detail"
        android:layout_alignLeft="@+id/temperature_detail"
        android:layout_alignStart="@+id/temperature_detail" />
    <TextView
        android:id="@+id/voltage_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@+id/voltage_detail"
        android:textSize="15dp"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/health_detail"
        android:layout_alignLeft="@+id/health_detail"
        android:layout_alignStart="@+id/health_detail" />

    <TextView
        android:id="@+id/temperature_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/temperature_label"
        android:textSize="15dp"
        android:layout_above="@+id/health_detail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp" />

    <TextView
        android:id="@+id/health_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/health_label"
        android:textSize="15dp"
        android:layout_alignTop="@+id/health_detail"
        android:layout_alignLeft="@+id/temperature_txt"
        android:layout_alignStart="@+id/temperature_txt" />

    <TextView
        android:id="@+id/voltage_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/voltage_label"
        android:textSize="15dp"
        android:layout_alignTop="@+id/voltage_detail"
        android:layout_alignLeft="@+id/health_txt"
        android:layout_alignStart="@+id/health_txt" />

    <TextView
        android:id="@+id/message_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/battery_data_label"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/eventTime_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/eventTime_label"
        android:textSize="15dp"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/voltage_txt"
        android:layout_alignLeft="@+id/voltage_txt"
        android:layout_alignStart="@+id/voltage_txt" />

    <TextView
        android:id="@+id/eventTime_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="EventTime"
        android:textSize="15dp"
        android:layout_alignTop="@+id/eventTime_txt"
        android:layout_alignLeft="@+id/voltage_detail"
        android:layout_alignStart="@+id/voltage_detail" />

</RelativeLayout>